--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.13.0+1
-  unique_identifier: ^0.0.3
+  email_validator: '^1.0.0'
 
 dev_dependencies:
   flutter_test:
