--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -22,6 +22,6 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+  - assets/images/log_minecraft.jpg
   #  - images/a_dot_ham.jpeg
