Now Backgrounds en Login are random

--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -29,3 +29,4 @@ flutter:
     - assets/creeper.jpg
     - assets/bee_minecraft.png
     - assets/images/Logo.png
+    - assets/images/Log_ForTheKing.png
