--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -30,3 +30,5 @@ flutter:
     - assets/bee_minecraft.png
     - assets/images/Logo.png
     - assets/images/Log_ForTheKing.png
+    - assets/images/minecraft.png
+    - assets/images/ForTheKing.jpg
