new iamges added for games

--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -33,3 +33,10 @@ flutter:
     - assets/images/Log_ForTheKing.png
     - assets/images/minecraft.png
     - assets/images/ForTheKing.jpg
+    - assets/gridIsaac.jpg
+    - assets/gridHollow.jpg
+    - assets/gridOver.jpg
+    - assets/gridSekiro.jpg
+    - assets/gridCivil.jpeg
+    - assets/gridTerraria.jpg
+    - assets/gridCeleste.jpg
