--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -40,3 +40,10 @@ flutter:
     - assets/gridCivil.jpeg
     - assets/gridTerraria.jpg
     - assets/gridCeleste.jpg
+    - assets/introIsaac.jpg
+    - assets/introOver.jpg
+    - assets/introSekiro.jpg
+    - assets/introCivil.jpg
+    - assets/introTerraria.jpg
+    - assets/introCeleste.jpg
+    - assets/introHollow.png
