Profile page finished :)

--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -47,3 +47,4 @@ flutter:
     - assets/introTerraria.jpg
     - assets/introCeleste.jpg
     - assets/introHollow.png
+    - assets/images/github.png
