--- a/finalproject/android/app/src/main/AndroidManifest.xml
+++ b/finalproject/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="finalproject"
+        android:label="Games Bookshelf"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
