--- a/finalproject/pubspec.yaml
+++ b/finalproject/pubspec.yaml
@@ -22,7 +22,7 @@ dev_dependencies:
 flutter_icons:
     android: true
     ios: true
-    image_path: "assets/images/Icon.png"
+    image_path: "assets/images/Icon.jpg"
 
 flutter:
 
